Add createFaq endpoint alias for voice command testing

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
     },
     "api/faq-search.js": {
       "runtime": "@vercel/node@3.0.7"
+    },
+    "api/createFaq.js": {
+      "runtime": "@vercel/node@3.0.7"
     }
   }
 }
